# EFDDH-Jira-Dashboard

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Home.py  Home.py.bak  MANIFEST.in  README.md  conftest.py  deploy.sh  fix_formatting.sh  pyproject.toml  requirements.txt  restructure.sh  run.sh  setup.cfg  setup.py  setup_env.sh
.streamlit/: config.toml
assets/: style.css
assets/css/: custom.css
assets/templates/: base.html
config/: __init__.py  config.py  logging_config.py
data/: test_EFDDH-Jira-Data-All.csv
efddh_dashboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pages/: 1_📊_Program_Overview.py  2_🏃_Sprint_Metrics.py  3_🎯_Epic_Tracking.py  4_👥_Team_Analysis.py  4_👥_Workload_Analysis.py  5_✅_Quality_Metrics.py  5_🔍_Quality_Metrics.py  __init__.py
pages.bak/: 1_📊_Program_Overview.py  2_🏃_Sprint_Metrics.py  3_🎯_Epic_Tracking.py  4_👥_Team_Analysis.py  5_🔍_Quality_Metrics.py  __init__.py
scripts/: pre_deploy_check.sh
src/: __init__.py
src/data/: __init__.py
src/metrics/: metrics_calculator.py
src/services/: __init__.py
src/utils/: __init__.py  constants.py  custom_exceptions.py  data_processor.py  error_handler.py  health_monitor.py  logger.py  types.py
src/visualizations/: __init__.py  metrics_calculator.py  program_charts.py  visualizations.py
static/css/: main.css
tests/: __init__.py  conftest.py
tests/e2e/: test_dashboard_accuracy.py  test_streamlit_app.py
tests/integration/: test_data_flow.py  test_metrics_accuracy.py
tests/unit/: test_data_accuracy.py  test_data_processor.py  test_imports.py  test_metrics_calculator.py  test_program_charts.py
tests/utils/: test_data_validator.py
(+2 files in other folders)
